# cli-standard-kit

./: .gitignore  README.md  build_and_upload.sh  pyproject.toml
.github/workflows/: python-publish.yml  release.yml
cli_commons/: __init__.py
cli_standard_kit/: __main__.py  init_project.py
cli_standard_kit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
