[project]
name = "cli-standard-kit"
version = "1.0.0"
description = "Unified CLI project template and initializer"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Cenk Kabahasanoglu" }]
requires-python = ">=3.9"
dependencies = ["cookiecutter>=2.5"]

[project.scripts]
cli-standard-kit = "cli_standard_kit.__main__:main"
